package com.trackwise.user.model;

public enum UserStatus {
    ACTIVE,
    SUSPENDED,
    DELETED
}
